src/objects/ints__Microbilt_Information__c.object
<CustomObject>
    <fields>
        <fullName>ints__ACHIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__ACHOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACH Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountNumberMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Number Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__AccountNumber__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AccountOwnerFirstName__c</fullName>
        <label>Account Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountOwnerLastName__c</fullName>
        <label>Account Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__AccountOwnerMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Owner Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__AccountTypeMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Type Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__AccountType__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__AvailableBalance__c</fullName>
        <label>Available Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalanceLast30Days__c</fullName>
        <label>Average Balance Last 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__AverageBalance__c</fullName>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Microbilt Information</relationshipLabel>
        <relationshipName>Microbilt_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__CurrencyType__c</fullName>
        <label>Currency Type</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DateTime__c</fullName>
        <label>Reported</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ints__DaysActive__c</fullName>
        <label>Days Active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositAmountDiff__c</fullName>
        <label>Direct Deposit Amount Diff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositAmount__c</fullName>
        <label>Direct Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositPayCycleMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Deposit Pay Cycle Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositPayCycle__c</fullName>
        <label>Direct Deposit Pay Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__DirectDepositor__c</fullName>
        <label>Direct Depositor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__GrossIncome__c</fullName>
        <label>Gross Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__InstitutionNameMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institution Name Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__InstitutionName__c</fullName>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__MostRecentDirectDeposit__c</fullName>
        <label>Most Recent Direct Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NSFCount14days__c</fullName>
        <label>NSF Count 14 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NSFCount30days__c</fullName>
        <label>NSF Count 30 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NSFCount60days__c</fullName>
        <label>NSF Count 60 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__NSFCount__c</fullName>
        <label>NSF Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Reference__c</fullName>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__RoutingNumberMatches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Routing Number Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ints__RoutingNumber__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__Success__c</fullName>
        <label>Success Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__TotalDeposits__c</fullName>
        <label>Total Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ints__TotalWithdrawals__c</fullName>
        <label>Total Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Microbilt Information</label>
    <nameField>
        <displayFormat>MI - {000000}</displayFormat>
        <label>Microbilt Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Microbilt Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>